--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/startrek
-#spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=nuevo-210817:us-central1:demo&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/startrek
+spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=nuevo-210817:us-central1:demo&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=root
 spring.datasource.username=postgres
 spring.datasource.password=root
 
