--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.data.rest.detection-strategy=annotated
 spring.batch.initialize-schema=never
 spring.jpa.hibernate.ddl-auto=update
-baseUrl=http://localhost:8080
+baseUrl=https://nuevo-210817.appspot.com
 
