--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/startrek
-spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=nuevo-210817:us-central1:demo&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/startrek
+#spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=nuevo-210817:us-central1:demo&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=root
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -14,5 +14,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.data.rest.detection-strategy=annotated
 spring.batch.initialize-schema=never
 spring.jpa.hibernate.ddl-auto=update
-baseUrl=https://nuevo-210817.appspot.com
+#baseUrl=https://nuevo-210817.appspot.com
+baseUrl=http://localhost:8080
 
